--- a/03-数据绑定/数据绑定.html
+++ b/03-数据绑定/数据绑定.html
@@ -19,6 +19,12 @@
     Vue.config.productionTip = false  //阻止vue在启动时生成生产提示
 
 
+    new Vue({
+        el:'#root',
+        data:{
+        name:'Rika',
+        }
+    })
 </script>
 </body>
 </html>
