--- a/16-自定义指令/自定义指令.html
+++ b/16-自定义指令/自定义指令.html
@@ -16,6 +16,18 @@
 <script type="text/javascript">
     Vue.config.productionTip = false;
 
+    Vue.directive('fbind',{
+        bind(element, binding) {
+            element.value = binding.value;
+        },//指令与元素成功绑定时调用
+        inserted(element) {
+            element.focus();
+        },//指令所在元素被插入页面时调用
+        update(element, binding) {
+            element.value = binding.value;
+        },//指令所在的模板被重新解析时调用
+    })
+
     new Vue({
         el: '#root',
         data: {
@@ -25,17 +37,6 @@
             big(element, binding) {
                 element.innerHTML = binding.value * 10;
             },
-            fbind: {
-                bind(element, binding) {
-                    element.value = binding.value;
-                },//指令与元素成功绑定时调用
-                inserted(element) {
-                    element.focus();
-                },//指令所在元素被插入页面时调用
-                update(element, binding) {
-                    element.value = binding.value;
-                },//指令所在的模板被重新解析时调用
-            }
         }
     })
 </script>
